--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,7 +59,7 @@ jobs:
         languages: ${{ matrix.language }}
 
     - name: Run the build
-      run: cd ${WORKDIR} && ./build-pmdk.sh
+      run: cd ${WORKDIR} && . build-pmdk.sh; build_pmdk
         
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
