--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -25,7 +25,7 @@ jobs:
 
         - name: Build
           run: |
-            . $WORKDIR/build-pmdk.sh; build_pmdk
+            ./$WORKDIR/build-pmdk.sh
 
         - name: Create testconfig files
           run: |
