--- a/.github/workflows/pmdk_documentation_linux.yml
+++ b/.github/workflows/pmdk_documentation_linux.yml
@@ -1,6 +1,6 @@
 name: PMDK_documentation_linux
 
-on: [ workflow_dispatch ]
+on: [workflow_dispatch]
 
 jobs:
   linux:
@@ -13,7 +13,7 @@ jobs:
         os: [[self-hosted, rhel],[self-hosted, opensuse]]
     env:
       WORKDIR: utils/gha-runners
-      SCRIPT: pmdk-tests/split_manpage/split_manpage_tests.py
+      SCRIPT: /src/test/split_manpage/split_manpage_tests.py
 
     steps:
         - name: clone PMDK repository
@@ -25,7 +25,7 @@ jobs:
 
         - name: Build
           run: |
-            ./$WORKDIR/build-pmdk-doc.sh
+            . $WORKDIR/build-pmdk.sh; build_pmdk_documentation
 
         - name: Run tests
           run: python3 ${SCRIPT} --with-pmem2 -r $(pwd) -i $(pwd)/../install
