--- a/.github/workflows/pmdk_documentation_linux.yml
+++ b/.github/workflows/pmdk_documentation_linux.yml
@@ -1,10 +1,13 @@
-name: PMDK_runners
+name: PMDK_documentation_linux
 
-on: [push, pull_request]
+on:
+  schedule:
+    # run this job at 00:00 UTC every Saturday
+    - cron: '0 0 * * 6'
 
 jobs:
   linux:
-    name: PMDK_runners
+    name: PMDK_documentation_linux
     if: github.repository == 'pmem/pmdk'
     runs-on: ${{ matrix.os }}
     strategy:
@@ -13,10 +16,10 @@ jobs:
         os: [[self-hosted, rhel],[self-hosted, opensuse]]
     env:
       WORKDIR: utils/gha-runners
+      SCRIPT: src/test/split_manpage/split_manpage_tests.py
 
     steps:
-
-        - name: Clone the git repo
+        - name: clone PMDK repository
           uses: actions/checkout@v2
 
         - name: Get system information
@@ -25,12 +28,7 @@ jobs:
 
         - name: Build
           run: |
-            . $WORKDIR/build-pmdk.sh; build_pmdk
-
-        - name: Create testconfig files
-          run: |
-            ./$WORKDIR/create-testconfig.sh
+            . $WORKDIR/build-pmdk.sh; build_pmdk_documentation
 
         - name: Run tests
-          run: |
-            make check
+          run: python3 ${SCRIPT} --with-pmem2 -r $(pwd) -i $(pwd)/../install
