--- a/.github/workflows/pmdk_documentation_linux.yml
+++ b/.github/workflows/pmdk_documentation_linux.yml
@@ -21,7 +21,7 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Install necessary packages
-          run: sudo apt-get update && sudo apt-get install -y libndctl-dev build-essential cmake git pkg-config libdaxctl-dev
+          run: sudo apt-get update && sudo apt-get install -y libndctl-dev build-essential cmake git pkg-config libdaxctl-dev pandoc
 
         - name: Build
           run: |
