--- a/.github/workflows/pmdk_documentation_linux.yml
+++ b/.github/workflows/pmdk_documentation_linux.yml
@@ -21,11 +21,11 @@ jobs:
 
         - name: Install necessary packages
           run: |
-            sudo apt-get install -y build-essential cmake git libndctl-dev libdaxctl-dev pandoc pkg-config
+            sudo apt-get install -y build-essential cmake libndctl-dev libdaxctl-dev pandoc pkg-config
 
         - name: Build
           run: |
-            ./$WORKDIR/build-pmdk.sh build_documentation
+            ./$WORKDIR/build-pmdk.sh build_documentatio
 
         - name: Run tests
           run: python3 ${SCRIPT} --with-pmem2 -r $(pwd) -i $(pwd)/../install
