--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,7 +25,7 @@ jobs:
 
         - name: Build
           run: |
-            ./$WORKDIR/build-pmdk.sh build_documentation
+            ./$WORKDIR/build-pmdk-documentation.sh
 
         - name: Run tests
           run: python3 ${SCRIPT} --with-pmem2 -r $(pwd) -i $(pwd)/../install
