--- a/.github/workflows/unittest_long.yml
+++ b/.github/workflows/unittest_long.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   schedule:
     - cron:  '5 0 * * 6'    # At 00:05 on Saturday.
-  timeout-minutes: 960
+  workflow_dispatch:
 
 jobs:
   linux:
