--- a/.github/workflows/unittest_long.yml
+++ b/.github/workflows/unittest_long.yml
@@ -9,8 +9,9 @@ on:
 jobs:
   linux:
     name: long
-    if: github.repository == 'pmem/pmdk'
+    if: github.repository == 'skotlowskii/pmdk'
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 960
     strategy:
       fail-fast: false
       matrix:
