--- a/.github/workflows/unittest_valgrind.yml
+++ b/.github/workflows/unittest_valgrind.yml
@@ -16,13 +16,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [[self-hosted, rhel],[self-hosted, opensuse]]
-        config: ['-m "force-enable"',
+        config: [['-m "force-enable"',
                  '-p "force-enable"',
                  '-d "force-enable"',
-                 '-e "force-enable"'],['-t "check" --force-enable memcheck',
+                 '-e "force-enable"'],
+                 ['-t "check" --force-enable memcheck',
                  '-t "check" --force-enable pmemcheck',
                  '-t "check" --force-enable drd',
-                 '-t "check" --force-enable helgrind']
+                 '-t "check" --force-enable helgrind']]
     env:
       WORKDIR: utils/gha-runners
 
