--- a/.github/workflows/unittest_valgrind.yml
+++ b/.github/workflows/unittest_valgrind.yml
@@ -16,14 +16,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [[self-hosted, rhel],[self-hosted, opensuse]]
-        config: [['-m "force-enable"',
-                 '-p "force-enable"',
-                 '-d "force-enable"',
-                 '-e "force-enable"'],
-                 ['-t "check" --force-enable memcheck',
-                 '-t "check" --force-enable pmemcheck',
-                 '-t "check" --force-enable drd',
-                 '-t "check" --force-enable helgrind']]
+        config: ['RUNTESTS -m "force-enable"',
+                 'RUNTESTS -p "force-enable"',
+                 'RUNTESTS -d "force-enable"',
+                 'RUNTESTS -e "force-enable"',
+                 'RUNTESTS.py -t "check" --force-enable memcheck',
+                 'RUNTESTS.py -t "check" --force-enable pmemcheck',
+                 'RUNTESTS.py -t "check" --force-enable drd',
+                 'RUNTESTS.py -t "check" --force-enable helgrind']
     env:
       WORKDIR: utils/gha-runners
 
@@ -46,8 +46,5 @@ jobs:
 
         - name: Run tests - Bash framework
           run: |
-            cd src/test/ && ./RUNTESTS ${{ matrix.config }}
+            cd src/test/ && ./${{ matrix.config }}
 
-        - name: Run tests - Python framework
-          run: |
-            cd src/test/ && ./RUNTESTS.py ${{ matrix.config }}
