--- a/.github/workflows/unittest_valgrind_py.yml
+++ b/.github/workflows/unittest_valgrind_py.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   linux:
     name: valgrind
-    if: github.repository == 'pmem/pmdk'
+    if: github.repository == 'skotlowskii/pmdk'
     runs-on: ${{ matrix.os }}
     timeout-minutes: 4320 # wait max 3 days
     strategy:
